ci: on main branch

--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -3,11 +3,11 @@ name: Audits
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
     branches:
-      - master
+      - main
 
 jobs:
   express-graphql:
