chore(pioneer): install curl with all yes

--- a/implementations/pioneer/Dockerfile
+++ b/implementations/pioneer/Dockerfile
@@ -1,7 +1,7 @@
 FROM swift:latest
 WORKDIR /root
 RUN apt update
-RUN apt install curl
+RUN apt install curl -y
 COPY ./Package.* ./
 RUN swift package resolve
 COPY ./Sources ./Sources
