chore(pioneer): avoid release build

--- a/implementations/pioneer/Dockerfile
+++ b/implementations/pioneer/Dockerfile
@@ -5,4 +5,4 @@ RUN apt install curl -y
 COPY ./Package.* ./
 RUN swift package resolve
 COPY ./Sources ./Sources
-RUN swift build -c release
+RUN swift build
