--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -35,7 +35,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: express-graphql-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   apollo-server:
     runs-on: ubuntu-latest
@@ -62,7 +64,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: apollo-server-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   mercurius:
     runs-on: ubuntu-latest
@@ -89,7 +93,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: mercurius-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   graphql-yoga:
     runs-on: ubuntu-latest
@@ -116,7 +122,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: graphql-yoga-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   graphql-helix:
     runs-on: ubuntu-latest
@@ -143,7 +151,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: graphql-helix-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   graph-client:
     runs-on: ubuntu-latest
@@ -170,7 +180,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: graph-client-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   thegraph:
     runs-on: ubuntu-latest
@@ -195,7 +207,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: thegraph-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   hotchocolate:
     runs-on: ubuntu-latest
@@ -223,7 +237,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: hotchocolate-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   postgraphile:
     runs-on: ubuntu-latest
@@ -251,7 +267,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: postgraphile-report
-          path: README.md
+          path: |
+            README.md
+            report.json
   pioneer:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -278,7 +296,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pioneer-report
-          path: README.md
+          path: |
+            README.md
+            report.json
 
   report:
     name: Report
