--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -300,6 +300,36 @@ jobs:
             README.md
             report.json
 
+  deno:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    env:
+      PORT: 4000
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: yarn
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build:esm
+      - name: Start
+        run: yarn workspace deno start -d --wait
+      # TODO: cache docker build artifacts
+      - name: Audit
+        run: node scripts/audit-implementation.mjs .
+      - name: Upload report
+        uses: actions/upload-artifact@v3
+        with:
+          name: deno-report
+          path: |
+            README.md
+            report.json
+
   report:
     name: Report
     runs-on: ubuntu-latest
@@ -316,6 +346,7 @@ jobs:
         hotchocolate,
         postgraphile,
         pioneer,
+        deno,
       ]
     steps:
       - name: Checkout
@@ -373,6 +404,11 @@ jobs:
         with:
           name: pioneer-report
           path: implementations/pioneer
+      - name: Download deno report
+        uses: actions/download-artifact@v3
+        with:
+          name: deno-report
+          path: implementations/deno
       - name: Commit
         run: |
           git config user.name "github-actions[bot]"
