--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -11,324 +11,49 @@ on:
 
 jobs:
   express-graphql:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace express-graphql start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: express-graphql-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: express-graphql
   apollo-server:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace apollo-server start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: apollo-server-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: apollo-server
   mercurius:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace mercurius start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: mercurius-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: mercurius
   graphql-yoga:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace graphql-yoga start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: graphql-yoga-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: graphql-yoga
   graphql-helix:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace graphql-helix start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: graphql-helix-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: graphql-helix
   graph-client:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace graph-client start &
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: graph-client-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-javascript.yml
+    with:
+      workspace: graph-client
   thegraph:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      URL: https://api.thegraph.com/subgraphs/name/sushiswap/exchange/graphql
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: thegraph-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-url.yml
+    with:
+      url: https://api.thegraph.com/subgraphs/name/sushiswap/exchange/graphql
   hotchocolate:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace hotchocolate start -d --wait
-      # TODO: cache docker build artifacts
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: hotchocolate-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-docker.yml
+    with:
+      workspace: hotchocolate
   postgraphile:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace postgraphile start -d --wait
-      # TODO: cache docker build artifacts
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: postgraphile-report
-          path: |
-            README.md
-            report.json
+    uses: ./.github/workflows/reusable-audit-docker.yml
+    with:
+      workspace: postgraphile
   pioneer:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace pioneer start -d --wait
-      # TODO: cache docker build artifacts
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: pioneer-report
-          path: |
-            README.md
-            report.json
-
+    uses: ./.github/workflows/reusable-audit-docker.yml
+    with:
+      workspace: pioneer
   deno:
-    runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    env:
-      PORT: 4000
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build:esm
-      - name: Start
-        run: yarn workspace deno start -d --wait
-      # TODO: cache docker build artifacts
-      - name: Audit
-        run: node scripts/audit-implementation.mjs .
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        with:
-          name: deno-report
-          path: |
-            README.md
-            report.json
+    uses: ./.github/workflows/reusable-audit-docker.yml
+    with:
+      workspace: deno
 
   report:
     name: Report
@@ -354,61 +79,10 @@ jobs:
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
-      - name: Download express-graphql report
+      - name: Download audit reports
         uses: actions/download-artifact@v3
         with:
-          name: express-graphql-report
-          path: implementations/express-graphql
-      - name: Download apollo-server report
-        uses: actions/download-artifact@v3
-        with:
-          name: 'apollo-server-report'
-          path: implementations/apollo-server
-      - name: Download mercurius report
-        uses: actions/download-artifact@v3
-        with:
-          name: mercurius-report
-          path: implementations/mercurius
-      - name: Download graphql-yoga report
-        uses: actions/download-artifact@v3
-        with:
-          name: graphql-yoga-report
-          path: implementations/graphql-yoga
-      - name: Download graphql-helix report
-        uses: actions/download-artifact@v3
-        with:
-          name: graphql-helix-report
-          path: implementations/graphql-helix
-      - name: Download graph-client report
-        uses: actions/download-artifact@v3
-        with:
-          name: graph-client-report
-          path: implementations/graph-client
-      - name: Download thegraph report
-        uses: actions/download-artifact@v3
-        with:
-          name: thegraph-report
-          path: implementations/thegraph
-      - name: Download hotchocolate report
-        uses: actions/download-artifact@v3
-        with:
-          name: hotchocolate-report
-          path: implementations/hotchocolate
-      - name: Download postgraphile report
-        uses: actions/download-artifact@v3
-        with:
-          name: postgraphile-report
-          path: implementations/postgraphile
-      - name: Download pioneer report
-        uses: actions/download-artifact@v3
-        with:
-          name: pioneer-report
-          path: implementations/pioneer
-      - name: Download deno report
-        uses: actions/download-artifact@v3
-        with:
-          name: deno-report
-          path: implementations/deno
+          name: audit-reports
       - name: Diff
         run: git diff --minimal
       - name: Commit
