--- a/.github/workflows/reusable-audit-url.yml
+++ b/.github/workflows/reusable-audit-url.yml
@@ -8,7 +8,7 @@ on:
         type: string
 
 jobs:
-  thegraph:
+  audit:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
