--- a/.github/workflows/reusable-audit-docker.yml
+++ b/.github/workflows/reusable-audit-docker.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Docker Buildx
+      - name: Set up docker buildx
         uses: docker/setup-buildx-action@v2
       - name: Set up node
         uses: actions/setup-node@v3
