--- a/.github/workflows/reusable-audit-url.yml
+++ b/.github/workflows/reusable-audit-url.yml
@@ -3,6 +3,9 @@ name: Reusable audit URL
 on:
   workflow_call:
     inputs:
+      workspace:
+        required: true
+        type: string
       url:
         required: true
         type: string
