--- a/implementations/deno/package.json
+++ b/implementations/deno/package.json
@@ -3,6 +3,6 @@
   "name": "deno",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "start": "docker compose up"
+    "start": "docker compose up --no-build"
   }
 }
