--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -62,4 +62,5 @@ jobs:
       - name: Install
         run: yarn install --immutable
       - name: Test
-        run: yarn test --forceExit
+        timeout-minutes: 1
+        run: yarn test --detectOpenHandles
