--- a/implementations/postgraphile/package.json
+++ b/implementations/postgraphile/package.json
@@ -3,6 +3,6 @@
   "name": "postgraphile",
   "packageManager": "yarn@3.2.3",
   "scripts": {
-    "start": "docker compose up --no-build"
+    "start": "docker compose up"
   }
 }
