--- a/implementations/hotchocolate/docker-compose.yml
+++ b/implementations/hotchocolate/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
-  server:
+  hotchocolate-server:
+    image: hotchocolate-server
     build: .
     environment:
       - DOTNET_URLS=http://+:${PORT}
